Tekton/tekton-metrics-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-controller-metrics
  namespace: tekton-pipelines
  labels:
    app.kubernetes.io/part-of: tekton-pipelines
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: tekton-pipelines
  ports:
    - name: metrics
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-webhook-metrics
  namespace: tekton-pipelines
  labels:
    app.kubernetes.io/part-of: tekton-pipelines
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/part-of: tekton-pipelines
  ports:
    - name: metrics
      port: 9090
      targetPort: 9090
